fix always-visible scrollbar

--- a/src/app/public/src/modules/table-of-contents/table-of-contents-wrapper.component.scss
+++ b/src/app/public/src/modules/table-of-contents/table-of-contents-wrapper.component.scss
@@ -15,7 +15,7 @@
     max-height: 100%;
 
     .stache-affix-top {
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
 
